[fix] - div market height on mobile

--- a/src/assets/sass/responsive.scss
+++ b/src/assets/sass/responsive.scss
@@ -32,6 +32,7 @@
 
   .event-market{
     min-height:auto;
+    padding:0 0 20px 0;
   }
 
 }
